styles.css
html,
body,
.container {
     height: 100%;
     font-family: 'Roboto', sans-serif;
}

body {
    margin: 0;
}
img {
    width: 100%;
    height: auto;
}

 /* body { */
    /* overflow: hidden; */
 /* } */

 h1,
 h3,
 h2,
 p {
    margin: 0px;
    flex: 1;
 }

.container {
    display: flex;
    flex-direction: column;
    overflow-y: auto;
}

.logo {
    max-width: 100px;
    height: auto;
}

.main {
    overflow-y: auto;
}

.left {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

button {
    height: 50px;
    width: 100px;
    border: 0;
    padding: 0;
    border-radius: 7px;
    font-size: 16px;
    font-family: 'Roboto', sans-serif;
}

.right img {
    object-fit: contain;
}

.awesome,
.information,
.quote,
.call {
    flex: 1 1 auto;
}

.footer {
    flex: 0 0 auto;
}

.header {
    display: flex;
    justify-content: space-between;
    padding: 50px 100px 0px 100px
}

ul,.link {
    display: flex;
    list-style: none;
    text-decoration: none;
    gap: 20px;

}

.awesome {
    padding: 50px 100px;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap-reverse;
}

.left,
.right {
    box-sizing: border-box;
}

.col-50 {
    width: calc(50% - 30px);
}

.information {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 50px 200px;
    gap: 20px;
}

.icon {
    display: flex;
    gap: 25px;
}

.thumb {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    gap: 10px;
}

.thumb img {
    object-fit: contain;
}

.thumb p,
h2 {
    text-align: center;
}

.quote {
    padding: 50px 200px;
    display: flex;
    flex-direction: column;
    gap: 15px;
}

.quote p {
    padding: 0px 50px;
}

.call {
    display: flex;
    justify-content: space-between;
    margin: 50px 100px;
    padding: 50px 100px;
    border-radius: 10px;
}

.action>*:first-child {
    font-weight: 700;
}

.footer {
    padding: 25px;
    text-align: center;
}

@media screen and (max-width:800px) {

    .awesome {
        gap: 10px;
    }
    
    .col-50 {
        width: 100%;
        justify-content: center;
        align-items: center;
        gap: 15px;
    }

    .col-50 h1,
    h3 {
        text-align: center;
    }

    .icon {
        flex-direction: column;
        gap: 10px;
    }

    .call {
        flex-direction: column;
        align-items: center;
        text-align: center;
        gap: 10px;
        padding: 25px 50px;
    }

}

.header,
.awesome,
.footer {
    background-color: #1F2937;
}

h1 {
    font-size: 48px;
    font-weight: 900;
    color: #F9FaF8;
}

h2 {
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
}

h3,
a,
.footer {
    font-size: 18px;
    color: #E5E7EB;
}

.quote {
    background-color: #E5E7EB;
    color: #1F2937;
    font-size: 36px;
}

.quote>*:first-child {
    font-weight: 100;
    font-style: italic;
}

.quote>*:last-child {
    font-size: 24px;
    font-weight: 700;
    text-align: end;
}

button,
.call {
    background-color: #3882F6;
    color: #F9FaF8;
}

.call button {
    border: 2px solid white;
}

